--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -66,14 +66,25 @@
     "title": "Referenssit",
     "projects": {
       "project1": {
-        "description": "Näyttökertojen keskiarvo +58K\nTykkäykset suosituimmassa videossa +6K"
+        "descriptions": "Näyttökertojen keskiarvo +58K\nTykkäykset suosituimmassa videossa +6K"
       },
       "project2": {
         "description": "Ensimmäisenä kuukautena +1.1 miljoonaa näyttökertaa\nKokonaisuutena +2.9 miljoonaa näyttökertaa\nTykkäykset +130K\nSeuraajat +20K\nYhteistyö jatkuu"
       },
       "project3": {
-        "title": "Advertising Strategy for Brand C",
-        "description": "Implemented an advertising strategy that doubled conversions."
+        "description": "Näyttökertojen keskiarvo +22K\nKommentit suosituimmassa videossa 1.4K\nYhteistyö jatkuu"
+      },
+      "project4": {
+        "description": "Näyttökertojen keskiarvo +59K\nTykkäykset suosituimmassa videossa +24K\nYhteistyö jatkuu"
+      },
+      "project5": {
+        "description": "Näyttökertojen keskiarvo +26K\nKommentit suosituimmassa videossa +5K\nYhteistyö jatkuu"
+      },
+      "project6": {
+        "description": "Näyttökertojen keskiarvo +31K\nYhteistyö jatkuu, lisää analytiikkaa tulossa"
+      },
+      "project7": {
+        "description": "Yhteistyö alkamassa, analytiikkaa tulossa"
       }
     }
   },
@@ -86,93 +97,6 @@
       "2023": "Laajensimme palveluitamme ja saavutimme uusia virstanpylväitä.",
       "2024": "Käynnistimme innovatiivisia markkinointikampanjoita ja kasvatimme asiakaskuntaamme.",
       "2025": "Saavutimme alan tunnustusta ja asetimme uusia standardeja."
-    }
-  },
-
-  "prices": {
-    "title": "Palvelumme",
-    "subtitle": "Etkö löydä sopivaa palvelua? Ota yhteyttä tiimiimme, niin luomme sinulle räätälöidyn paketin.",
-    "services": {
-      "socialMediaManagement": {
-        "title": "Sosiaalisen Median Hallinta",
-        "description": "Kattava hallinta sosiaalisen median tileillesi.",
-        "bulletpoints": {
-          "1": "Tilien luominen ja optimointi",
-          "2": "Sisältökalenterin luominen",
-          "3": "Yhteisön hallinta ja sitoutuminen"
-        },
-        "price": "500 € / kuukausi"
-      },
-      "contentCreation": {
-        "title": "Sisällöntuotanto",
-        "description": "Laadukasta sisältöä, joka on räätälöity brändillesi.",
-        "bulletpoints": {
-          "1": "Graafinen suunnittelu ja visuaalinen sisältö",
-          "2": "Videotuotanto ja editointi",
-          "3": "Blogikirjoitukset ja artikkelit"
-        },
-        "price": "300 € / kuukausi"
-      },
-      "socialMediaAds": {
-        "title": "Sosiaalisen Median Mainokset",
-        "description": "Kohdennetut mainoskampanjat näkyvyytesi lisäämiseksi.",
-        "bulletpoints": {
-          "1": "Mainoskampanjoiden suunnittelu ja toteutus",
-          "2": "Kohdennetut mainokset eri alustoilla",
-          "3": "A/B-testaus ja optimointi"
-        },
-        "price": "Alkaen 200 €"
-      },
-      "seoOptimization": {
-        "title": "SEO-Optimointi",
-        "description": "Paranna verkkosivustosi näkyvyyttä hakukoneissa.",
-        "bulletpoints": {
-          "1": "Avainsanatutkimus ja analyysi",
-          "2": "On-page ja off-page optimointi",
-          "3": "Kuukausittaiset suorituskykyraportit"
-        },
-        "price": "400 € / kuukausi"
-      },
-      "emailMarketing": {
-        "title": "Sähköpostimarkkinointi",
-        "description": "Sitouta yleisösi kohdennetuilla sähköpostikampanjoilla.",
-        "bulletpoints": {
-          "1": "Sähköpostilistan segmentointi",
-          "2": "Räätälöidyt sähköpostimallit",
-          "3": "Suorituskyvyn seuranta ja raportointi"
-        },
-        "price": "250 € / kuukausi"
-      },
-      "brandingStrategy": {
-        "title": "Brändäysstrategia",
-        "description": "Kehitä vahva ja johdonmukainen brändi-identiteetti.",
-        "bulletpoints": {
-          "1": "Logon ja visuaalisen identiteetin suunnittelu",
-          "2": "Brändiviestintä ja äänensävy",
-          "3": "Kattavat brändiohjeet"
-        },
-        "price": "600 € / projekti"
-      },
-      "influencerMarketing": {
-        "title": "Vaikuttajamarkkinointi",
-        "description": "Tee yhteistyötä vaikuttajien kanssa brändisi edistämiseksi.",
-        "bulletpoints": {
-          "1": "Sopivien vaikuttajien tunnistaminen",
-          "2": "Kampanjoiden suunnittelu ja toteutus",
-          "3": "Suorituskyvyn analysointi"
-        },
-        "price": "Alkaen 500 €"
-      },
-      "analyticsAndReporting": {
-        "title": "Analytiikka ja Raportointi",
-        "description": "Seuraa ja analysoi markkinointisi suorituskykyä.",
-        "bulletpoints": {
-          "1": "Räätälöidyt analytiikkapaneelit",
-          "2": "Kuukausittaiset suorituskykyarviot",
-          "3": "Toimintakelpoiset oivallukset ja suositukset"
-        },
-        "price": "300 € / kuukausi"
-      }
     }
   },
 
