Remove the emoji

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,7 @@
         "roles": {
           "1": "Project Manager"
         },
-        "description": "One of the boys! You know the saying, 'Behind every great man is a woman ;)'. Well, not entirely, but Aino's superpower in this team is keeping everything organized, from projects to administrative tasks. Aino strikes a perfect balance between spontaneity and precision. Her educational background includes sports and coaching, and she is currently pursuing general education studies with electives in communication and journalism."
+        "description": "One of the boys! You know the saying, 'Behind every great man is a woman'. Well, not entirely, but Aino's superpower in this team is keeping everything organized, from projects to administrative tasks. Aino strikes a perfect balance between spontaneity and precision. Her educational background includes sports and coaching, and she is currently pursuing general education studies with electives in communication and journalism."
       },
       "alex": {
         "roles": {
