--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -44,7 +44,7 @@
         "roles": {
           "1": "Projektipäällikkö"
         },
-        "description": "One of the boys! Kyllähän te tiedätte, että kaiken takana on nainen ;) Ei nyt täysin, mutta todellakin Ainon supervoima tässä tiimissä on pitää langat käsissä niin projektien, kuin hallinnollisten tehtävien osalta. Ainossa on loistavassa suhteessa heittäytymiskykyä ja säntillisyyttä. Koulutustaustaa löytyy liikunnan ja valmennuksen puolelta, mutta tuoreimpana käynnissä on yleisen kasvatustieteen opinnot, sekä viestinnän ja journalistiikan valinnaiset opinnot."
+        "description": "One of the boys! Kyllähän te tiedätte, että kaiken takana on nainen. Ei nyt täysin, mutta todellakin Ainon supervoima tässä tiimissä on pitää langat käsissä niin projektien, kuin hallinnollisten tehtävien osalta. Ainossa on loistavassa suhteessa heittäytymiskykyä ja säntillisyyttä. Koulutustaustaa löytyy liikunnan ja valmennuksen puolelta, mutta tuoreimpana käynnissä on yleisen kasvatustieteen opinnot, sekä viestinnän ja journalistiikan valinnaiset opinnot."
       },
       "alex": {
         "roles": {
